--- a/templates/oj/form/Input.html
+++ b/templates/oj/form/Input.html
@@ -5,7 +5,7 @@
             <span var="prefix" class="prefix"></span>
             <span var="stem">
                 <input var="input" type="hidden" />
-                <label var="deflt"></label>
+                <label var="dflt"></label>
             </span>
             <span var="suffix" class="suffix"></span>
         </div>
