--- a/templates/oj/components/Link.html
+++ b/templates/oj/components/Link.html
@@ -1,4 +1,4 @@
 <a>
-    <span var="icon" class="valign-middle"></span>
-    <span var="label" class="valign-middle"></span>
+    <span var="icon"></span>
+    <span var="label"></span>
 </a>
