--- a/css/oj/components/Button.css
+++ b/css/oj/components/Button.css
@@ -26,6 +26,9 @@
 
     cursor: pointer;
 }
+.OjButton:hover {
+	text-decoration: none;
+}
     .OjButton > .label {
 		color: #FFFFFF;
 		font-size: 12px;
@@ -34,6 +37,7 @@
 		text-shadow: 0px -1px 1px #666666;
 		vertical-align: middle;
     }
+
 	.OjButton > .icon,
 	.OjButton > .icon > .OjComponent {
 		vertical-align: middle;
