--- a/css/oj/modal/Modal.css
+++ b/css/oj/modal/Modal.css
@@ -52,6 +52,13 @@
 			}
 
 			.OjModal > .pane > .content {
+				position: absolute;
+
+				top: 40px;
+				left: 0px;
+				right: 0px;
+				bottom: 0px;
+
 				margin: 0px;
 				padding: 0px;
 
@@ -66,6 +73,9 @@
 				border-bottom-left-radius: 5px;
 			}
 				.OjModal > .pane > .content > .container {
+					width: 100%;
+					height: 100%;
+
 					min-width: 300px;
 					min-height: 100px;
 
