--- a/css/oj/modal/Modal.css
+++ b/css/oj/modal/Modal.css
@@ -76,10 +76,13 @@
 					width: 100%;
 					height: 100%;
 
-					min-width: 300px;
+					min-width: 200px;
 					min-height: 100px;
 
+					color: #333;
 					font-size: 14px;
+					text-align: left;
+					text-shadow: none;
 
 					border: none;
 					-webkit-border-bottom-right-radius: 5px;
