--- a/css/oj/list/List.css
+++ b/css/oj/list/List.css
@@ -15,6 +15,10 @@
 	-moz-box-shadow:    0px 1px 0px 0px #FFFFFF;
 	-webkit-box-shadow: 0px 1px 0px 0px #FFFFFF;
 	box-shadow:         0px 1px 0px 0px #FFFFFF;
+	
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 .OjList.items.horizontal,
 .OjList > .items.horizontal {
