--- a/css/oj/components/Fieldset.css
+++ b/css/oj/components/Fieldset.css
@@ -1,3 +1,21 @@
+.OjFieldset {
+	width: 100%;
+}
+.OjFieldset.animating,
 .OjFieldset.collapsed {
 	overflow: hidden;
 }
+
+	.OjFieldset.collapsed > .container {
+		display: none;
+	}
+	.OjFieldset.collapsed.animating > .container {
+		display: block;
+	}
+
+	.OjFieldset > .actuator {
+		position: absolute;
+
+		top: 0px;
+		right: 0px;
+	}
