--- a/css/oj/form/Input.css
+++ b/css/oj/form/Input.css
@@ -26,7 +26,7 @@
 .OjInput > .wrapper {
 	display: table;
 
-	max-width: 100%;
+	width: 100%;
 	height: 100%;
 
     background: #F7F7F7;
@@ -105,9 +105,15 @@
 
 			min-width: 10px;
 			min-height: 26px;
+
+			margin: 0px 5px;
 		}
 			.OjInput > .wrapper > .psuedoInput > .stem > .input {
 				display: block;
+				position: absolute;
+
+				top: 0px;
+				left: 0px;
 
 				width: 100%;
 				height: 100%;
@@ -132,8 +138,6 @@
 				left: 0px;
 				right: 0px;
 				height: 100%;
-
-				padding: 0px 5px;
 
 				color: #CCC;
 
