--- a/css/oj/form/Selector.css
+++ b/css/oj/form/Selector.css
@@ -14,6 +14,9 @@
 }
 
 	.OjSelector > .wrapper {
+		width: 100%;
+		height: 100%;
+
 		background: none;
 
 		border: none;
@@ -35,15 +38,16 @@
 	white-space: normal;
 }
 
-
-.OjOption .indicator {
-	overflow: hidden;
+.OjOption {
+	cursor: pointer;
 }
+	.OjOption .indicator {
+		overflow: hidden;
+	}
+		.OjOption .indicator > .input {
+			position: absolute;
 
-.OjOption .indicator > .input {
-	position: absolute;
+			height: 0px;
 
-	height: 0px;
-
-	left: -50px;
-}
+			left: -50px;
+		}
