renamed the modal manager to window manager. fixed bootstrap bug. Added window as a target for event callbacks.

--- a/css/oj/window/Alert.css
+++ b/css/oj/window/Alert.css
@@ -1,4 +1,4 @@
-.ModalManager,
+.WindowManager,
 .OjAlert {
 	position: absolute;
 
@@ -17,7 +17,7 @@
 
 	z-index: 999999;
 }
-.ModalManager {
+.WindowManager {
 	position: fixed;
 }
 	.OjAlert > .underlay {
