--- a/templates/oj/window/Modal.html
+++ b/templates/oj/window/Modal.html
@@ -2,10 +2,12 @@
 	<div var="underlay"></div>
 
 	<div var="pane">
-		<navcontroller var="bar" class="valign-middle"></navcontroller>
+		<flownav var="bar" class="valign-middle" cancel-label="Close"></flownav>
 
 		<div class="content">
-			<stack var="container"></stack>
+			<stack var="stack"></stack>
+
+            <div var="container"></div>
 
 			<div var="buttons"></div>
 		</div>
