--- a/templates/oj/window/Modal.html
+++ b/templates/oj/window/Modal.html
@@ -5,9 +5,7 @@
 		<flownav var="bar" class="valign-middle" cancel-label="Close"></flownav>
 
 		<div class="content">
-			<stack var="stack"></stack>
-
-            <div var="container"></div>
+			<stack var="container"></stack>
 		</div>
 
         <div var="buttons"></div>
