--- a/css/oj/list/List.css
+++ b/css/oj/list/List.css
@@ -20,42 +20,40 @@
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
-.OjList.items.horizontal,
 .OjList > .items.horizontal {
 	white-space: nowrap;
 }
 
-.OjList.items > .shadow,
-.OjList > .items > .shadow{
-	position: absolute;
+/*.OjList > .items > .shadow{*/
+	/*position: absolute;*/
 
-	top: 0px;
-	left: 0px;
+	/*top: 0px;*/
+	/*left: 0px;*/
 
-	width: 100%;
-	height: 9px;
+	/*width: 100%;*/
+	/*height: 9px;*/
 
-	background: none;
+	/*background: none;*/
 
-	-webkit-border-radius: 20px 20px 0px 0px;
-	-moz-border-radius: 20px 20px 0px 0px;
-	border-radius: 20px 20px 0px 0px;
+	/*-webkit-border-radius: 20px 20px 0px 0px;*/
+	/*-moz-border-radius: 20px 20px 0px 0px;*/
+	/*border-radius: 20px 20px 0px 0px;*/
 
-	-moz-box-shadow:    inset 0px 1px 0px 0px #DDDDDD;
-	-webkit-box-shadow: inset 0px 1px 0px 0px #DDDDDD;
-	box-shadow:         inset 0px 1px 0px 0px #DDDDDD;
-}
-	.OjItemRenderer {
+	/*-moz-box-shadow:    inset 0px 1px 0px 0px #DDDDDD;*/
+	/*-webkit-box-shadow: inset 0px 1px 0px 0px #DDDDDD;*/
+	/*box-shadow:         inset 0px 1px 0px 0px #DDDDDD;*/
+/*}*/
+	.OjList > .items > .OjItemRenderer {
 		display: block;
 
-		padding: 15px 20px;
+		padding: 15px;
 
 		background: none;
 
 		border-top: 1px solid #FFFFFF;
 		border-bottom: 1px solid #BBBBBB;
 	}
-	.items.horizontal > .OjItemRenderer {
+	.OjList > .items.horizontal > .OjItemRenderer {
 		display: inline-block;
 
 		padding: 0px;
@@ -63,17 +61,17 @@
 
 		border: none;
 	}
-	.OjItemRenderer.first {
-		border-top: none;
-	}
-	.OjItemRenderer.last {
-		border-bottom: none;
-	}
-		.OjItemRenderer > .accessory {
-			float: left;
+		.OjList > .items > .OjItemRenderer.first {
+			border-top: none;
+		}
+		.OjList > .items > .OjItemRenderer.last {
+			border-bottom: none;
+		}
+			.OjList > .items > .OjItemRenderer > .accessory {
+				float: left;
 
-			height: 100%;
-		}
-		.OjItemRenderer > .content {
-			text-align: left;
-		}
+				height: 100%;
+			}
+			.OjList > .items > .OjItemRenderer > .content {
+				text-align: left;
+			}
