--- a/css/oj/window/Modal.css
+++ b/css/oj/window/Modal.css
@@ -82,7 +82,7 @@
 
 			padding: 0px;
 		}
-			.OjModal > .pane > .content > .stack {
+			.OjModal > .pane > .content > .container {
 				width: 100%;
 				height: 100%;
 
@@ -120,17 +120,3 @@
 			.OjModal > .window > .pane > .buttons > * {
 				margin: 0px 50px;
 			}
-
-/* Modal Form Customization */
-.OjModal .OjComponent .container {
-	max-height: 400px;
-	overflow: auto;
-}
-.OjModal .OjForm .OjStack.container {
-	max-height: none;
-	overflow: auto;
-}
-	.OjModal .OjForm .OjStack.container > .container > .active {
-		max-height: 400px;
-		overflow: auto;
-	}
