--- a/templates/oj/window/OjModal.html
+++ b/templates/oj/window/OjModal.html
@@ -4,9 +4,7 @@
 	<div var="pane">
 		<flownav var="bar" class="valign-middle" cancel-label="Close"></flownav>
 
-		<div class="content">
-			<stack var="container"></stack>
-		</div>
+        <navstack var="container"></navstack>
 
         <div var="buttons"></div>
 	</div>
