--- a/css/oj/OJ.css
+++ b/css/oj/OJ.css
@@ -15,10 +15,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 
-	min-width: 200px;
-	min-height: 300px;
-
-	margin: 0px auto;
+	margin: 0px;
 
 	color: #333333;
 	font-size: 12px;
