--- a/css/oj/window/OjAlert.css
+++ b/css/oj/window/OjAlert.css
@@ -53,6 +53,10 @@
 		-webkit-box-shadow: 0px 0px 20px 0px #333333;
 		box-shadow:         0px 0px 20px 0px #333333;
 
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+
 		z-index: 5;
 	}
 		.OjAlert > .pane > .bar {
@@ -97,11 +101,39 @@
 				text-align: center;
 				text-shadow: 0px -1px 1px #000000;
 			}
-			.OjAlert > .pane > .content > .buttons {
-				padding: 20px 0px 0px;
 
-				text-align: center;
+		.OjAlert > .pane > .buttons {
+			padding: 10px 0px 20px;
+
+			text-align: center;
+		}
+			.OjAlert > .pane > .buttons > * {
+				margin: 0px 5px;
 			}
-				.OjAlert > .pane > .content > .buttons > * {
-					margin: 0px 5px;
+				.OjAlert > .pane > .buttons .OjButton {
+					height: 23px;
+
+					padding: 2px 10px;
+
+					background: #ADB2B8; /* Old browsers */
+					background: -moz-linear-gradient(top, #888888 0%, #AAAAAA 4%, #666666 100%); /* FF3.6+ */
+					background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #888888), color-stop(4%, #AAAAAA), color-stop(100%, #666666)); /* Chrome,Safari4+ */
+					background: -webkit-linear-gradient(top, #888888 0%, #ABB0B7 4%, #6C7681 100%); /* Chrome10+,Safari5.1+ */
+					background: -o-linear-gradient(top, #888888 0%, #AAAAAA 4%, #666666 100%); /* Opera 11.10+ */
+					background: -ms-linear-gradient(top, #888888 0%, #AAAAAA 4%, #666666 100%); /* IE10+ */
+					background: linear-gradient(top, #AEB3B9 0%, #6A737E 100%); /* W3C */
+
+					border: 1px solid #4C4E50;
+					-webkit-border-radius: 5px;
+					-moz-border-radius: 5px;
+					border-radius: 5px;
+
+					-moz-box-shadow:    0px 1px 0px 0px #DDDDDD;
+					-webkit-box-shadow: 0px 1px 0px 0px #DDDDDD;
+					box-shadow:         0px 1px 0px 0px #DDDDDD;
+
+					font-size: 0px;
+					line-height: 0px;
+					text-decoration: none;
+					text-align: center;
 				}
