--- a/css/oj/window/OjModal.css
+++ b/css/oj/window/OjModal.css
@@ -1,7 +1,9 @@
 .OjModal {}
 	.OjModal > .pane {
-		max-width: 90% !important;
-		max-height: 90% !important;
+		min-width: 300px;
+		min-height: 100px;
+		max-width: 100% !important;
+		max-height: 100% !important;
 
 		background: #EEE;
 
@@ -55,7 +57,7 @@
 				text-align: center;
 			}
 
-		.OjModal > .pane > .content {
+		.OjModal > .pane > .container {
 			position: absolute;
 
 			top: 40px;
@@ -75,32 +77,13 @@
 			-moz-border-radius-bottomleft: 5px;
 			border-bottom-right-radius: 5px;
 			border-bottom-left-radius: 5px;
+
+			overflow: hidden;
 		}
-		.OjModal.no-buttons > .pane > .content {
+		.OjModal.no-buttons > .pane > .container {
 			bottom: 0px;
-
-			padding: 0px;
 		}
-			.OjModal > .pane > .content > .container {
-				width: 100%;
-				height: 100%;
 
-				min-width: 200px;
-				min-height: 100px;
-
-				color: #333;
-				font-size: 14px;
-				text-align: left;
-				text-shadow: none;
-
-				border: none;
-				-webkit-border-bottom-right-radius: 5px;
-				-webkit-border-bottom-left-radius: 5px;
-				-moz-border-radius-bottomright: 5px;
-				-moz-border-radius-bottomleft: 5px;
-				border-bottom-right-radius: 5px;
-				border-bottom-left-radius: 5px;
-			}
 
 		.OjModal > .pane > .buttons {
 			position: absolute;
