--- a/templates/window/OjModal.html
+++ b/templates/window/OjModal.html
@@ -2,10 +2,10 @@
 	<div var="underlay"></div>
 
 	<div var="pane">
-		<flownav var="bar" class="valign-middle" cancel-label="Close"></flownav>
+		<flownav var="bar" v-align="m" cancel-label="Close"></flownav>
 
-        <navstack var="container"></navstack>
+        <navstack var="container" class="content"></navstack>
 
-        <div var="buttons"></div>
+        <div var="buttons" v-align="m"></div>
 	</div>
 </div>
