--- a/css/OJ.css
+++ b/css/OJ.css
@@ -1,78 +1,3 @@
-/* Standard HTML Element Styles */
-* {
-	position: relative;
-
-	margin: 0px;
-	padding: 0px;
-
-	vertical-align: top;
-}
-*:focus {
-	outline: none;
-}
-
-html, body {
-	width: 100%;
-	height: 100%;
-
-	margin: 0px;
-
-	color: #333333;
-	font-size: 12px;
-	font-family: Helvetica, Arial, sans-serif;
-	text-align: left;
-	vertical-align: top;
-
-	z-index: -1;
-
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-body:hover {
-	z-index: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	font-weight: bold;
-}
-
-h1 {
-	margin: 40px 0px 10px;
-
-	font-size: 24px;
-}
-
-h2 {
-	margin: 30px 0px 10px;
-
-	font-size: 20px;
-}
-
-h3 {
-	font-size: 18px;
-}
-
-h4 {
-	font-size: 16px;
-}
-
-h5 {
-	font-size: 14px;
-}
-
-h6 {
-	font-size: 12px;
-}
-
-a, a:ACTIVE, a:VISITED, a:FOCUS {
-	color: #3B5998;
-	outline: none;
-	text-decoration: none;
-}
-a:HOVER {
-	text-decoration: underline;
-}
-
-
 /* Utility Styles */
 .hidden {
 	display: none !important;
@@ -82,35 +7,33 @@ a:HOVER {
 
 
 /* Horizontal Align Styles */
-.halign-left {
+[h-align="l"] {
 	text-align: left;
 }
 
-.halign-center {
+[h-align="c"] {
 	text-align: center;
 }
 
-.halign-right {
+[h-align="r"] {
 	text-align: right;
 }
 
 
 /* Vertical Align Styles */
-.valign-top {
+[v-align="t"] {
 	vertical-align: top;
 }
 
-.valign-middle {
+[v-align="m"] {
 	vertical-align: middle;
 }
 
-.valign-bottom {
+[v-align="b"] {
 	vertical-align: bottom;
 }
 
-.valign-top > .aligner, .valign-top:after,
-.valign-middle > .aligner, .valign-middle:after,
-.valign-bottom > .aligner, .valign-bottom:after {
+[v-align]:after {
 	width: 1px;
 	height: 100% !important;
 
@@ -119,26 +42,26 @@ a:HOVER {
 	content: "";
 }
 
-.valign-top > *,
-.valign-top > .OjComponent,
-.valign-top:after {
-	vertical-align: top;
+[v-align="t"] > *,
+[v-align="t"] > .OjComponent,
+[v-align="t"]:after {
+	vertical-align: top !important;
 }
 
-.valign-middle > *,
-.valign-middle > .OjComponent,
-.valign-middle:after {
-	vertical-align: middle;
+[v-align="m"] > *,
+[v-align="m"] > .OjComponent,
+[v-align="m"]:after {
+	vertical-align: middle !important;
 }
 
-.valign-bottom > *,
-.valign-bottom > .OjComponent,
-.valign-bottom:after {
-	vertical-align: bottom;
+[v-align="b"] > *,
+[v-align="b"] > .OjComponent,
+[v-align="b"]:after {
+	vertical-align: bottom !important;
 }
 
-.valign-top > span, .valign-middle > span, .valign-bottom > span,
-.valign-top:after, .valign-middle:after, .valign-bottom:after {
+[v-align] > span,
+[v-align]:after {
 	display: inline-block;
 }
 
@@ -192,25 +115,16 @@ a:HOVER {
 
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.OJ > .container {
-	text-align: center;
-}
+	.OJ > .container {
+		text-align: center;
+	}
 
-.OJ > .renderer {
-	position: absolute;
+	.OJ > .renderer {
+		position: absolute;
 
-	top: -99999px;
-	left: -99999px;
+		top: -99999px;
+		left: -99999px;
 
-	width: 100%;
-	height: 100%;
-}
-
-.OJ > .loading {
-	position: absolute;
-
-	top: 50%;
-	left: 50%;
-
-	margin: -15px 0px 0px -15px;
-}
+		width: 100%;
+		height: 100%;
+	}
