--- a/templates/form/OjTokenInput.htm
+++ b/templates/form/OjTokenInput.htm
@@ -7,6 +7,6 @@
 			<div var="filterBox" class="OjFilterBox" class="filter grey"></div>
 			<span var="suffix"></span>
 		</div>
-		<div var="valueHldr" class="OjOrderedList" class="value valign-middle"></div>
+		<div var="valueHldr" class="OjOrderedList" class="value" v-align="m"></div>
 	</div>
 </div>
