--- a/templates/nav/OjFlowNavController.html
+++ b/templates/nav/OjFlowNavController.html
@@ -1,12 +1,12 @@
 <div class="flow-nav-controller">
     <div var="bottom">
-        <div var="btmLeft" class="left valign-middle"></div>
-        <div var="btmTitle" class="title valign-middle"></div>
-        <div var="btmRight" class="right valign-middle"></div>
+        <div var="btmLeft" class="left" v-align="m"></div>
+        <div var="btmTitle" class="title" v-align="m"></div>
+        <div var="btmRight" class="right" v-align="m"></div>
     </div>
     <div var="top">
-        <div var="topLeft" class="left valign-middle"></div>
-        <div var="topTitle" class="title valign-middle"></div>
-        <div var="topRight" class="right valign-middle"></div>
+        <div var="topLeft" class="left" v-align="m"></div>
+        <div var="topTitle" class="title" v-align="m"></div>
+        <div var="topRight" class="right" v-align="m"></div>
     </div>
 </div>
