--- a/templates/window/OjAlert.html
+++ b/templates/window/OjAlert.html
@@ -2,11 +2,11 @@
 	<div var="underlay"></div>
 
 	<div var="pane">
-		<div var="bar"></div>
+		<div var="bar" v-align="m"></div>
 
-		<div class="content">
-			<div var="container"></div>
-		</div>
+        <div class="content" v-align="m">
+            <label var="container"></label>
+        </div>
 
         <div var="buttons"></div>
 	</div>
