--- a/css/window/OjModal.css
+++ b/css/window/OjModal.css
@@ -12,6 +12,10 @@
 		-moz-border-radius: 5px;
 		border-radius: 5px;
 	}
+	.is-mobile .OjModal > .pane {
+		width: 100%;
+		height: 100%;
+	}
 		.OjModal > .pane > .bar {
 			position: absolute;
 
@@ -77,6 +81,8 @@
 			-moz-border-radius-bottomleft: 5px;
 			border-bottom-right-radius: 5px;
 			border-bottom-left-radius: 5px;
+
+			text-shadow: none;
 
 			overflow: hidden;
 		}
