--- a/css/OJ.css
+++ b/css/OJ.css
@@ -1,3 +1,44 @@
+/* Standard HTML Element Styles */
+* {
+	position: relative;
+
+	margin: 0px;
+	padding: 0px;
+
+	vertical-align: top;
+}
+*:focus {
+	outline: none;
+}
+
+html, body {
+	width: 100%;
+	min-width: 100%;
+
+	height: 100%;
+	min-height: 100%;
+
+	margin: 0px;
+	padding: 0px;
+
+	background: transparent;
+
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	line-height: 0px;
+	text-align: left;
+	vertical-align: top;
+
+	z-index: -1;
+
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+}
+body:hover,
+body.is-mobile, body.is-tablet {
+	z-index: 0;
+}
+
 /* Utility Styles */
 .hidden {
 	display: none !important;
