--- a/css/window/OjAlert.css
+++ b/css/window/OjAlert.css
@@ -117,6 +117,9 @@
 		.OjAlert.no-buttons > .pane > .content {
 			padding-bottom: 10px;
 		}
+            .OjAlert > .pane > .content > .OjLabel {
+                text-align: center;
+            }
 
 		.OjAlert > .pane > .buttons {
 			padding: 10px 0px 20px;
