--- a/templates/components/OjLink.html
+++ b/templates/components/OjLink.html
@@ -1,4 +1,4 @@
 <a>
-    <span var="icon"></span>
-    <span var="label"></span>
+    <span var="icon" v-align="m"></span>
+    <span var="label" v-align="m"></span>
 </a>
