--- a/css/form/OjComboBox.css
+++ b/css/form/OjComboBox.css
@@ -13,6 +13,10 @@
 
         z-index: 3;
     }
+    .OjComboBox > .wrapper > .psuedoInput > .stem {
+        margin: 0px;
+        padding: 0px;
+    }
         .OjComboBox > .wrapper > .psuedoInput .value {
             color: #333333;
             font-family: Helvetica, Arial, sans-serif;
