--- a/src/templates/form/OjFilterBox.htm
+++ b/src/templates/form/OjFilterBox.htm
@@ -4,7 +4,7 @@
 		<div var="inputHldr" class="input">
 			<span var="prefix"></span>
 			<input var="input" type="hidden" />
-			<textinput var="valueHldr" class="value"></textinput>
+			<text-input var="valueHldr" class="value"></text-input>
 			<span class="disclosure"></span>
 			<span var="suffix"></span>
 			<list var="list"></list>
