--- a/src/templates/form/OjTokenInput.htm
+++ b/src/templates/form/OjTokenInput.htm
@@ -4,9 +4,9 @@
 		<div var="inputHldr" class="input">
 			<span var="prefix"></span>
 			<input var="input" type="hidden" />
-			<div var="filterBox" class="OjFilterBox" class="filter grey"></div>
+			<oj-filter-box var="filterBox" class="filter grey"></oj-filter-box>
 			<span var="suffix"></span>
 		</div>
-		<div var="valueHldr" class="OjOrderedList" class="value" v-align="m"></div>
+		<oj-ordered-list var="valueHldr" class="value" v-align="m"></oj-ordered-list>
 	</div>
 </div>
