--- a/src/templates/window/OjModal.html
+++ b/src/templates/window/OjModal.html
@@ -2,9 +2,9 @@
 	<div var="underlay"></div>
 
 	<div var="pane">
-		<flownav var="bar" v-align="m" cancel-label="Close"></flownav>
+		<flow-nav var="bar" v-align="m" cancel-label="Close"></flow-nav>
 
-        <navstack var="container" class="content"></navstack>
+        <nav-stack var="container" class="content"></nav-stack>
 
         <div var="btns" v-align="m"></div>
 	</div>
