--- a/src/templates/form/OjValue.html
+++ b/src/templates/form/OjValue.html
@@ -1,6 +1,4 @@
-<div>
-    <div var="wrapper">
-        <label var="label"></label>
-	    <div var="value"></div>
-    </div>
+<div class="flexbox">
+    <label var="lbl"></label>
+    <div var="val"></div>
 </div>
