--- a/src/templates/window/OjAlert.html
+++ b/src/templates/window/OjAlert.html
@@ -2,12 +2,10 @@
 	<div var="underlay"></div>
 
 	<div var="pane">
-		<div var="bar" v-align="m"></div>
+		<div var="bar"></div>
 
-        <div class="content" v-align="m">
-            <label var="container"></label>
-        </div>
+        <div var="container" class="content"></div>
 
-        <div var="btns"></div>
+        <div var="btns" class="flexbox"></div>
 	</div>
 </div>
