--- a/src/css/components/OjButton.css
+++ b/src/css/components/OjButton.css
@@ -1,18 +1,15 @@
 .OjButton {
     padding: 2px 10px;
 
-	background: #ADB2B8; /* Old browsers */
+    -webkit-justify-content: center;
+    justify-content: center;
 
-	border: 1px solid #4C4E50;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+    -webkit-align-items: center;
+    align-items: center;
 
-	font-size: 0px;
-	line-height: 0px;
 	text-decoration: none;
-	text-align: center;
 
+    font-size: 12px;
 	cursor: pointer;
 }
 .OjButton:hover {
@@ -21,13 +18,7 @@
 .OjButton.disabled {
 	cursor: not-allowed;
 }
-    .OjButton .icn {
-        font-size: 12px;
-    }
-	.OjButton .lbl {
-		font-size: 12px;
-        line-height: normal;
-
+    .OjButton .lbl {
 		vertical-align: middle;
 
         -webkit-touch-callout: none;
