--- a/src/css/window/OjAlert.css
+++ b/src/css/window/OjAlert.css
@@ -57,33 +57,28 @@
 	 }
 
 	.OjAlert > .pane {
-		max-width: 100%;
-        max-height: 100%;
+		max-width: 90%;
+        max-height: 90%;
 
-		background: #0b1b44;
-		border: none;
+        background: #FFF;
+        border: none;
+
+        overflow: hidden;
 
 		z-index: 5;
 	}
 		.OjAlert > .pane > .bar {
-			height: 3px;
 			padding: 15px 10px 10px;
 
-			background: #858b9d; /* Old browsers */
-
-			color: #FFFFFF;
 			font-size: 18px;
 			font-weight: bold;
 			text-align: center;
-
-			overflow: visible;
 		}
 		.OjAlert > .pane > .content {
 			display: block;
 
 			padding: 20px 10px 10px;
 
-			color: #FFFFFF;
 			font-size: 16px;
 			text-align: center;
 		}
@@ -94,29 +89,16 @@
                 text-align: center;
             }
 
-		.OjAlert > .pane > .buttons {
-			padding: 10px 0px 20px;
-
-			text-align: center;
+		.OjAlert > .pane > .btns {
+            padding: 10px 0px 0px;
 		}
-			.OjAlert > .pane > .buttons > * {
-				margin: 0px 5px;
+			.OjAlert > .pane > .btns > * {
+                margin-right: 1px;
+                border-radius: 0px;
+
+                flex-grow: 1;
+                -webkit-flex-grow: 1;
 			}
-				.OjAlert > .pane > .buttons .OjButton {
-					height: 23px;
-
-					padding: 2px 10px;
-
-					background: #ADB2B8; /* Old browsers */
-
-					border: 1px solid #4C4E50;
-
-					-moz-box-shadow:    0px 1px 0px 0px #DDDDDD;
-					-webkit-box-shadow: 0px 1px 0px 0px #DDDDDD;
-					box-shadow:         0px 1px 0px 0px #DDDDDD;
-
-					font-size: 0px;
-					line-height: 0px;
-					text-decoration: none;
-					text-align: center;
-				}
+            .OjAlert > .pane > .btns > :last-child {
+                margin-right: 0px;
+            }
