--- a/src/templates/nav/OjFlowNavController.html
+++ b/src/templates/nav/OjFlowNavController.html
@@ -1,12 +1,12 @@
 <div class="flow-nav-controller">
     <div var="bottom">
-        <div var="btmLeft" class="left" v-align="m"></div>
-        <div var="btmTitle" class="title" v-align="m"></div>
-        <div var="btmRight" class="right" v-align="m"></div>
+        <div var="btm_left" class="left flexbox"></div>
+        <div var="btm_title" class="title flexbox"></div>
+        <div var="btm_right" class="right flexbox"></div>
     </div>
     <div var="top">
-        <div var="topLeft" class="left" v-align="m"></div>
-        <div var="topTitle" class="title" v-align="m"></div>
-        <div var="topRight" class="right" v-align="m"></div>
+        <div var="top_left" class="left flexbox"></div>
+        <div var="top_title" class="title flexbox"></div>
+        <div var="top_right" class="right flexbox"></div>
     </div>
 </div>
