--- a/src/themes/default.css
+++ b/src/themes/default.css
@@ -1,10 +1,5 @@
-span, p {
-	line-height: normal;
-}
-
 h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
-	line-height: normal;
 }
 
 h1 {
@@ -144,10 +139,6 @@ h1, h2, h3, h4, h5, h6, .bold, .bolder {
 	background: #FFF;
 
 	border: 1px solid #333;
-
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
 }
 .OjInput > .wrapper > .psuedoInput > .stem {
 	padding: 0px 5px;
@@ -193,12 +184,11 @@ h1, h2, h3, h4, h5, h6, .bold, .bolder {
 	height: 100% !important;
 }
 .OjAlert > .pane > .bar,
-.OjModal > .pane > .bar .title > .OjLabel {
+.OjModal > .pane > .bar .title > * {
 	color: #FFF;
 	font-size: 18px;
 	font-family: Oswald-Light, Helvetica, Arial, sans-serif;
 	font-weight: normal;
-	line-height: normal;
 	text-transform: uppercase;
 	text-shadow: 1px 1px 1px #000;
 	white-space: nowrap;
@@ -294,15 +284,4 @@ h1, h2, h3, h4, h5, h6, .bold, .bolder {
 
 	border: 1px solid #BBBBBB;
 	border-top-color: #AAAAAA;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-
-	-moz-box-shadow:    0px 1px 0px 0px #FFFFFF;
-	-webkit-box-shadow: 0px 1px 0px 0px #FFFFFF;
-	box-shadow:         0px 1px 0px 0px #FFFFFF;
-
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
 }
