--- a/src/templates/form/OjSelector.html
+++ b/src/templates/form/OjSelector.html
@@ -1,13 +1,13 @@
 <div>
     <div var="wrapper">
-        <label var="label"></label>
+        <label var="lbl"></label>
         <div var="psuedoInput">
-            <span var="prefix" class="prefix"></span>
+            <span var="prefix_lbl" class="prefix"></span>
             <span var="stem">
                 <list var="input" item_renderer="OjOption"></list>
                 <label var="dflt"></label>
             </span>
-            <span var="suffix" class="suffix"></span>
+            <span var="suffix_lbl" class="suffix"></span>
         </div>
     </div>
 </div>
