bug fixes and updates

--- a/src/css/OJ.css
+++ b/src/css/OJ.css
@@ -185,10 +185,10 @@ a, blockquote, label, p, pre {
 .table {
     display: table;
 }
-.row {
+.table .row {
     display: table-row;
 }
-.cell {
+.table .cell {
     display: table-cell;
 }
 
