--- a/src/css/nav/OjTabNavController.css
+++ b/src/css/nav/OjTabNavController.css
@@ -25,9 +25,11 @@
         vertical-align: middle;
     }
 
-.OjTabNavController {}
+.OjTabNavController {
+    flex-wrap: nowrap;
+}
     .OjTabNavController > .OjButton {
-        max-width: 140px;
+        width: 100%;
         height: 46px;
 
         padding: 0px 20px;
@@ -40,20 +42,28 @@
         box-shadow:         none;
 
         text-align: center;
+
+        flex-grow: 1;
+        flex-shrink: 1;
     }
     .OjTabNavController > .OjButton.active {
         background: rgba(255, 255, 255, 0.15);
     }
 
-        .OjTabNavController > .OjButton > .icon {
+        .OjTabNavController > .OjButton > .icn {
             width: 30px;
             height: 30px;
 
             margin: 0px;
-            padding: 1px 0px;
-        }
+            padding: 0px 0px 1px;
 
-        .OjTabNavController > .OjButton > .label {
+            font-size: 30px;
+        }
+            .OjTabNavController > .OjButton > .icn > * {
+                display: block;
+            }
+
+        .OjTabNavController > .OjButton > .lbl {
             display: block;
 
             margin: 0px;
@@ -64,6 +74,6 @@
             font-weight: normal;
             text-align: center;
         }
-        .OjTabNavController > .OjButton.active > .label {
+        .OjTabNavController > .OjButton.active > .lbl {
             color: #FFF;
         }
