--- a/src/css/form/OjSwitch.css
+++ b/src/css/form/OjSwitch.css
@@ -26,6 +26,8 @@
         box-shadow:         none;
     }
         .OjSwitch.OjInput > .wrapper > .psuedoInput {
+            height: 30px;
+
             background: transparent;
 
             -webkit-border-radius: 15px;
