--- a/src/templates/window/OjAlert.html
+++ b/src/templates/window/OjAlert.html
@@ -6,6 +6,8 @@
 
         <div var="container" class="content"></div>
 
-        <div var="btns" flex-h></div>
+        <div var="btns" flex-h>
+            <button var="cancel_btn" on-press="_onCancelPress">Ok</button>
+        </div>
     </div>
 </div>
