--- a/src/css/OJ.css
+++ b/src/css/OJ.css
@@ -137,6 +137,12 @@ body.is-mobile, body.is-tablet {
     -webkit-flex-direction: row;
     flex-direction: row;
 }
+[flex-h].reverse,
+.OjComponent[flex-h].reverse {
+    -ms-flex-direction: row-reverse;
+    -webkit-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+}
 
 [flex-v],
 .OjComponent[flex-v] {
@@ -149,6 +155,12 @@ body.is-mobile, body.is-tablet {
     -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
+}
+[flex-v].reverse,
+.OjComponent[flex-v].reverse {
+    -ms-flex-direction: column-reverse;
+    -webkit-flex-direction: column-reverse;
+    flex-direction: column-reverse;
 }
 
 
