--- a/src/css/form/OjInput.css
+++ b/src/css/form/OjInput.css
@@ -14,14 +14,17 @@
     overflow: visible;
 }
 .OjInput .wrapper {
-    display: table;
+    display: flex;
 
     width: 100%;
     height: 100%;
 
     background: #F7F7F7;
 
-    vertical-align: middle;
+    flex-wrap: nowrap;
+
+    align-items: center;
+    justify-content: space-between;
 }
 .OjInput .wrapper:hover {
     border-color: #AAAAAA;
@@ -33,10 +36,6 @@
     border-color: #ED541D;
 }
     .OjInput .wrapper > * {
-        display: table-cell;
-
-        height: 26px;
-
         margin: 0px;
         padding: 0px;
 
@@ -64,6 +63,9 @@
     }
 
     .OjInput .psuedoInput {
+        display: flex;
+        align-items: center;
+
         width: 100%;
         height: 100%;
 
@@ -78,6 +80,7 @@
         .OjInput .stem {
             display: block;
 
+            width: 100%;
             height: 100%;
 
             min-width: 10px;
@@ -87,10 +90,6 @@
         }
             .OjInput .input {
                 display: block;
-                position: absolute;
-
-                top: 0px;
-                left: 0px;
 
                 width: 100%;
                 height: 100%;
