--- a/src/css/window/OjAlert.css
+++ b/src/css/window/OjAlert.css
@@ -101,6 +101,18 @@
                 flex-grow: 1;
                 -webkit-flex-grow: 1;
             }
+            .OjAlert > .pane > .btns > :nth-child(2) {
+                padding-left: 15px;
+                border-top-left-radius: 3px;
+                border-bottom-left-radius: 3px;
+            }
             .OjAlert > .pane > .btns > :last-child {
                 margin-right: 0px;
+                padding-right: 15px;
+                border-top-right-radius: 3px;
+                border-bottom-right-radius: 3px;
+            }
+            .OjAlert > .pane > .btns > .cancel_btn {
+                margin-right: 10px;
+                border-radius: 3px;
             }
