--- a/src/templates/form/OjSelector.html
+++ b/src/templates/form/OjSelector.html
@@ -4,7 +4,7 @@
         <div var="psuedoInput">
             <span var="prefix_lbl" class="prefix"></span>
             <span var="stem">
-                <list var="input" item_renderer="OjOption"></list>
+                <list var="input" item_renderer="OjRadioOption"></list>
                 <label var="dflt"></label>
             </span>
             <span var="suffix_lbl" class="suffix"></span>
