--- a/src/css/form/OjInput.css
+++ b/src/css/form/OjInput.css
@@ -94,6 +94,9 @@
                 width: 100%;
                 height: 100%;
 
+                min-width: 26px; /* this is a hack bug fix for ios safari */
+                min-height: 26px; /* this is a hack bug fix for ios safari */
+
                 margin: 0px;
                 padding: 0px;
 
