--- a/src/templates/nav/OjFlowNavController.html
+++ b/src/templates/nav/OjFlowNavController.html
@@ -1,10 +1,10 @@
 <div class="flow-nav-controller">
-    <div var="bottom">
+    <div var="bottom_bar">
         <div var="btm_left" class="left" flex-h></div>
         <div var="btm_title" class="title" flex-h></div>
         <div var="btm_right" class="right" flex-h></div>
     </div>
-    <div var="top">
+    <div var="top_bar">
         <div var="top_left" class="left" flex-h></div>
         <div var="top_title" class="title" flex-h></div>
         <div var="top_right" class="right" flex-h></div>
